--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/firstandthird/taskkit-svg-sprite#readme",
   "dependencies": {
     "async": "^2.4.0",
+    "glob": "^7.1.2",
     "svg-sprite": "^1.3.7",
     "taskkit-task": "^1.0.2"
   },
