--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/firstandthird/taskkit-svg-sprite#readme",
   "dependencies": {
     "async": "^2.4.0",
-    "svg-sprite": "^1.3.7",
+    "svgstore": "^2.0.3",
     "taskkit-task": "^1.0.2"
   },
   "devDependencies": {
