--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-firstandthird": "5.0.0",
+    "eslint-config-firstandthird": "^5.0.0",
     "eslint-plugin-import": "^2.20.1",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.0"
