--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "taskkit task for concatenating files",
   "main": "scripts.js",
   "scripts": {
-    "test": "tape test/test.*.js | tap-spec"
+    "test": "tape test/test.*.js | tap-spec",
+    "prepublishOnly": "npm run test"
   },
   "repository": {
     "type": "git",
