--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "taskkit task for concatenating files",
   "main": "scripts.js",
   "scripts": {
-    "test": "tape test/test.*.js | tap-spec"
+    "test": "tape test/test.*.js | tap-spec",
+    "prepublishOnly": "npm run test"
   },
   "repository": {
     "type": "git",
@@ -17,17 +18,17 @@
   },
   "homepage": "https://github.com/firstandthird/taskkit-svg-sprite#readme",
   "dependencies": {
-    "async": "^3.1.1",
+    "async": "^3.2.0",
     "svg-sprite": "^1.5.0",
     "taskkit-task": "^3.0.0",
-    "xmldom": "^0.2.1"
+    "xmldom": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-firstandthird": "^5.0.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.20.2",
     "tap-spec": "^5.0.0",
-    "tape": "^4.13.0"
+    "tape": "^4.13.2"
   },
   "eslintConfig": {
     "extends": "firstandthird"
